# ufc-prediction-model

./: README.md  pyproject.toml  requirements.txt
data/: README.md
src/ufc_model/: __init__.py  cli.py  config.py  data.py  elo.py  features.py  modeling.py  odds.py
tests/: test_odds.py
