[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ufc-outcome-model"
version = "0.1.0"
description = "A chronological CatBoost model for UFC bout outcome research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost",
    "joblib",
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ufc-model = "ufc_model.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
